--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-select": "^5.4.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
